Correção da equipe e ajustes no css

--- a/equipe.html
+++ b/equipe.html
@@ -21,24 +21,49 @@
   </body>
 
 
-  <h1 class="titulo1">Conheça nossa equipe</h1>
-  <p class="titulo1">Por trás de cada linha de código, existe um rosto. Conheça as pessoas que tornam isso possível.</p>
+  </div>
 
-  <h2 class="titulo1">Renner Farias</h2>
-  <p class="titulo1">Responsável pelo desenvolvimento e coordenação técnica do projeto.</p>
-  <a href="Membros/renner.html">Ver perfil completo</a>
 
-  <h2 class="titulo1">José Artur</h2>
-  <p class="titulo1">Responsável pela identidade visual e experiência do usuário.
-  </p>
-  <a href="Membros/jose.html">Ver perfil completo</a>
+  <div class="center-text" id="service">
+    <h2>Conheça nossa equipe</h2>
+    <p style="margin-bottom: 20px;">Por trás de cada linha de código, existe um rosto. Conheça as pessoas que tornam
+      isso possível.</p>
 
-  <h2 class="titulo1">Igor Lima</h2>
-  <p class="titulo1">Responsável pela tecnologia do site e inovação técnica. </p>
-  <a href="Membros/igor.html">Ver perfil completo</a>
+    <div class="service-grid">
+
+      <div class="team-member">
+        <a href="Membros/renner.html">
+          <div class="box-service-equipe box-renner"></div>
+        </a>
+        <h3 class="titulo1">Renner Farias</h3>
+        <p class="titulo1">Desenvolvimento e <br>coordenação técnica</p>
+      </div>
+
+      <div class="team-member">
+        <a href="Membros/jose.html">
+          <div class="box-service-equipe box-jose"></div>
+        </a>
+        <h3 class="titulo1">José Artur</h3>
+        <p class="titulo1">Identidade visual e UX</p>
+      </div>
+
+      <div class="team-member">
+        <a href="Membros/igor.html">
+          <div class="box-service-equipe box-igor"></div>
+        </a>
+        <h3 class="titulo1">Igor Lima</h3>
+        <p class="titulo1">Tecnologia e inovação técnica</p>
+      </div>
+
+    </div>
+  </div>
 
   <br>
-  <p class="titulo1">&copy;2025 TechConnect. Todos os direitos reservados.</p>
+  <hr style="color: white;">
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+
+
+
 </body>
 
 </html>
