criação do portfólio e correção do nome

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav>
     <a href="../site_empresarial/index.html">Home</a>|
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
-    <a href="../site_empresarial/portifolio.html">Portifólio</a>|
+    <a href="../site_empresarial/portifolio.html">Portfólio</a>|
     <a href="../site_empresarial/equipe.html">Equipe</a>|
     <a href="../site_empresarial/contato.html">Contato</a>|
   </nav>
