--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="../index.html">Home</a>|
             <a href="../quemsomos.html">Quem somos</a>|
-            <a href="../portifolio.html">Portifólio</a>|
+            <a href="../portifolio.html">Portfólio</a>|
             <a href="../equipe.html">Equipe</a>|
             <a href="../contato.html">Contato</a>|
         </nav>
