--- a/portifolio.html
+++ b/portifolio.html
@@ -1,28 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portifólio</title>
+  <title>Portfólio</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
   <nav>
     <a href="../site_empresarial/index.html">Home</a>|
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
-    <a href="../site_empresarial/portifolio.html">Portifólio</a>|
+    <a href="../site_empresarial/portifolio.html">Portfólio</a>|
     <a href="../site_empresarial/equipe.html">Equipe</a>|
     <a href="../site_empresarial/contato.html">Contato</a>|
   </nav>
 
   <div align="center">
-  
-    <h2>Portifólio</h2>
+    <h1>Nosso Portfólio</h1>
+    <br><br>
 
+    <p style="font-size: 18px; line-height: 1.6; max-width: 900px; margin: 0 auto;">
+      A <strong>TechConnect</strong> tem como missão desenvolver soluções digitais que conectam pessoas,
+      negócios e tecnologia. Nosso portfólio reúne alguns dos principais projetos que representam o
+      comprometimento da nossa equipe com <strong>inovação, qualidade e resultados.</strong>
+    </p>
 
+    <br><br>
+    <h2>Projetos em Destaque</h2>
+    <br>
+
+    <table border="1" cellspacing="0" cellpadding="15" style="border-collapse: collapse; width: 85%; text-align: left;">
+      <tr style="background-color: #1d1d2f; color: #c7d1ff;">
+        <th>Projeto</th>
+        <th>Descrição</th>
+        <th>Tecnologias</th>
+      </tr>
+
+      <tr>
+        <td><strong>Site Institucional - GreenTech</strong></td>
+        <td>Desenvolvimento de um site moderno e responsivo para uma startup sustentável, com foco em design
+          limpo e experiência do usuário.</td>
+        <td>HTML, CSS, JavaScript</td>
+      </tr>
+
+      <tr>
+        <td><strong>Sistema de Controle de Estoque</strong></td>
+        <td>Criação de um sistema web simples para cadastro de produtos, controle de entrada e saída e geração
+          de relatórios.</td>
+        <td>HTML, CSS, PHP</td>
+      </tr>
+
+      <tr>
+        <td><strong>Landing Page - Evento TechDay</strong></td>
+        <td>Página de divulgação com formulário de inscrição e layout responsivo, voltada para um evento
+          universitário de tecnologia.</td>
+        <td>HTML, CSS</td>
+      </tr>
+
+      <tr>
+        <td><strong>Protótipo de Dashboard Administrativo</strong></td>
+        <td>Modelo visual de painel de controle com seções de métricas, gráficos e navegação lateral,
+          desenvolvido para estudo de UX/UI.</td>
+        <td>HTML, CSS (Flexbox, Grid)</td>
+      </tr>
+    </table>
+
+    <br><br>
+    <p style="font-size: 18px; max-width: 900px; margin: 0 auto;">
+      Cada projeto foi planejado com foco em boas práticas, usabilidade e design responsivo,
+      representando o compromisso da <strong>TechConnect</strong> em entregar soluções digitais de qualidade.
+    </p>
   </div>
+
+  <hr>
+  <br>
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
 </body>
 
