--- a/index.html
+++ b/index.html
@@ -36,22 +36,20 @@
   </div>
 
   <div class="center-text" id="service">
-    <h2>Nossos Serviços</h2>
+    <h2>Projetos Desenvolvidos</h2>
     <div class="service-grid">
-      <div class="box-service">
-        <h3>Desenvolvimento de sites e sistemas web</h3>
-      </div>
-      <div class="box-service">
-        <h3>Desenvolvimento de sites e sistemas web</h3>
-      </div>
-      <div class="box-service">
-        <h3>Desenvolvimento de sites e sistemas web</h3>
-      </div>
-      <div class="box-service">
-        <h3>Desenvolvimento de sites e sistemas web</h3>
-      </div>
-    </div>
-  </div>
+
+      <a href="https://github.com/RennerFarias/PomodoroTimerOBS" target="_blank" style="text-decoration: none;">
+        <div class="box-service">
+          <h3>🍅 Timer Pomodoro OBS</h3>
+        </div>
+      </a>
+
+      <a href="https://github.com/Jose-si/Trabalho-CasasBahia---Java" target="_blank" style="text-decoration: none;">
+        <div class="box-service">
+          <h3>🛒 Sistema Loja Java</h3>
+        </div>
+      </a>
 
 
 </body>
