--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   <div class="center-text">
     <h1>Bem-vindo à TechConnect</h1>
     <p>
-      A <b>TechConnect</b> é uma empresa de tecnologia voltada para o desenvolvimento de soluções digitais inovadoras.
-      Nosso principal objetivo é conectar pessoas e negócios através da tecnologia, criando sistemas, sites e
-      aplicativos que impulsionam a produtividade e a transformação digital.
+      Na <b>TechConnect</b>, acreditamos que a tecnologia é o elo que transforma ideias em resultados reais.
+      Criamos soluções digitais sob medida — sites, sistemas e aplicativos — que conectam pessoas, otimizam processos
+      e impulsionam negócios rumo ao futuro.
     </p>
     <p>
-      Com uma equipe multidisciplinar e apaixonada por inovação, oferecemos serviços que vão desde o design e
-      desenvolvimento web até consultoria em TI, sempre prezando pela qualidade, segurança e experiência do usuário.
+      Nossa missão é simplificar o digital, aproximando empresas da inovação com criatividade, agilidade e
+      qualidade em cada projeto.
     </p>
     <p>
-      Na TechConnect, acreditamos que a tecnologia é a ponte que une ideias e resultados. Por isso, trabalhamos para
-      tornar cada projeto uma conexão de sucesso entre o futuro e o presente.
+      Seja qual for o desafio, nós transformamos tecnologia em oportunidade.
     </p>
+
   </div>
 
   <div class="center-text" id="service">
