--- a/portifolio.html
+++ b/portifolio.html
@@ -32,7 +32,7 @@
     <h2>Projetos em Destaque</h2>
     <br>
 
-    <table border="1" cellspacing="0" cellpadding="15" style="border-collapse: collapse; width: 85%; text-align: left;">
+    <table border="1" cellpadding="15" style="border-collapse: collapse; width: 85%; text-align: left;">
       <tr style="background-color: #1d1d2f; color: #c7d1ff;">
         <th>Projeto</th>
         <th>Descrição</th>
@@ -69,7 +69,7 @@
     </table>
 
     <br><br>
-    <p style="font-size: 18px; max-width: 900px; margin: 0 auto;">
+    <p>
       Cada projeto foi planejado com foco em boas práticas, usabilidade e design responsivo,
       representando o compromisso da <strong>TechConnect</strong> em entregar soluções digitais de qualidade.
     </p>
