--- a/quemsomos.html
+++ b/quemsomos.html
@@ -18,44 +18,39 @@
         <a href="../site_empresarial/contato.html">Contato</a>|
     </nav>
 
-    
+
 
     <div align="center">
-        <h1>Quem somos</12>
-            <br><br>
-            <p style="font-size: 18px; line-height: 1.6; max-width: 900px; margin: 0 auto;">
-                A <strong>TechConnect</strong> nasceu com o propósito de transformar ideias em soluções digitais de
-                impacto.
-                Somos uma equipe apaixonada por tecnologia, inovação e criatividade, dedicada a conectar pessoas e
-                negócios
-                por meio do desenvolvimento de sistemas inteligentes e experiências digitais únicas.
-            </p>
-            <br>
-            <p style="font-size: 18px; line-height: 1.6; max-width: 900px; margin: 0 auto;">
-                Nosso compromisso é oferecer serviços que unam <strong>qualidade, desempenho e design</strong>,
-                sempre com foco na necessidade de cada cliente. Acreditamos que a tecnologia é a ponte entre o presente
-                e o futuro, e por isso buscamos constantemente aprimorar nossos processos e explorar novas tendências.
-            </p>
-
-            <br>
-            <h2>Missão</h2>
-            <br>
-            <p style="font-size: 18px;">Ser referência em desenvolvimento digital, reconhecida pela
-                excelência, inovação e impacto positivo no mercado.</p>
-            <br>
-            <h2>Valores</h2>
-            <br>
-            <ul style="font-size: 18px; list-style-position: inside; text-align: center; padding: 0;">
-                <li>Inovação constante</li>
-                <li>Comprometimento com a qualidade</li>
-                <li>Transparência e ética</li>
-                <li>Trabalho em equipe</li>
-                <li>Foco no cliente</li>
-            </ul>
+        <h1>Quem Somos</h1>
+        <br><br>
+        <p>
+            A <strong>TechConnect</strong> é formada por profissionais apaixonados por tecnologia e inovação.
+            Nascemos com o propósito de transformar o modo como pessoas e empresas interagem com o digital,
+            entregando soluções inteligentes e experiências únicas.
+        </p>
+        <br>
+        <p>
+            Mais do que desenvolver sistemas, buscamos construir relações de confiança,
+            sempre baseadas em <strong>ética, transparência e qualidade</strong>.
+            Trabalhamos com foco em resultados e em gerar impacto positivo por meio da tecnologia.
+        </p>
+        <br>
+        <h2>Missão</h2>
+        <p>Transformar ideias em soluções digitais que conectam pessoas e geram valor real.</p>
+        <br>
+        <h2>Valores</h2>
+        <ul>
+            <li>Inovação constante</li>
+            <li>Comprometimento com a qualidade</li>
+            <li>Transparência e ética</li>
+            <li>Trabalho em equipe</li>
+            <li>Foco no cliente</li>
+        </ul>
     </div>
     <hr>
     <br>
     <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+
 
 </body>
 
