--- a/contato.html
+++ b/contato.html
@@ -6,52 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
 
-    <body>
-        <nav>
-            <a href="../site_empresarial/index.html">Home</a>|
-            <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
-            <a href="../site_empresarial/portifolio.html">Portfólio</a>|
-            <a href="../site_empresarial/equipe.html">Equipe</a>|
-            <a href="../site_empresarial/contato.html">Contato</a>|
-        </nav>
-    </body>
+    <nav>
+        <a href="../site_empresarial/index.html">Home</a>|
+        <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
+        <a href="../site_empresarial/portifolio.html">Portfólio</a>|
+        <a href="../site_empresarial/equipe.html">Equipe</a>|
+        <a href="../site_empresarial/contato.html">Contato</a>|
+    </nav>
 
-    <h1 class="titulo1">Fale Conosco</h1>
+    <div class="center-text">
+        <h1>Fale Conosco</h1>
+        <p>Entre em contato conosco. Estamos prontos para transformar suas ideias em realidade digital.</p>
+    </div>
 
+    <div class="contact-container">
 
-    <h2 class="titulo1">Informações de Contato</h2>
-    <p class="titulo1"><strong>Email:</strong> contato@techconnect.com.br</p>
-    <p class="titulo1"><strong>Telefone:</strong> (00) 00000-0000</p>
-    <p class="titulo1"><strong>Endereço:</strong> R. Manoel Cardoso Palhano, 124-152 - Itararé, Campina Grande - PB,
-        58408-326</p>
+        <div class="contact-info">
+            <div class="info-card">
+                <h3>📧 Email</h3>
+                <p>contato@techconnect.com.br</p>
+            </div>
 
+            <div class="info-card">
+                <h3>📞 Telefone</h3>
+                <p>(83) 99999-9999</p>
+            </div>
 
-    <h2 class="titulo1">Redes Sociais</h2>
-    <ul>
-        <li><a href="https://www.instagram.com/sistemas.unifacisa/" target="_blank" class="titulo1">Instagram</a></li>
-        <li><a href="https://github.com/RennerFarias/site_empresarial" target="_blank" class="titulo1">GitHub</a></li>
-    </ul>
+            <div class="info-card">
+                <h3>📍 Endereço</h3>
+                <p>R. Manoel Cardoso Palhano, 124-152<br>Itararé, Campina Grande - PB<br>58408-326</p>
+            </div>
 
+            <div class="info-card">
+                <h3>🌐 Redes Sociais</h3>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/sistemas.unifacisa/" target="_blank">Instagram</a>
+                    <a href="https://github.com/RennerFarias/site_empresarial" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </div>
 
-    <h2 class="titulo1">Envie uma mensagem</h2>
-    <form action="formulario.html" method="get">
-        <label for="nome">Nome:</label><br>
-        <input type="text" name="nome" required><br><br>
+        <div class="contact-form">
+            <h2>Envie uma mensagem</h2>
+            <form action="formulario.html" method="get">
+                <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" name="nome" required>
+                </div>
 
-        <label for="email">Email:</label><br>
-        <input type="email" name="email" required><br><br>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
 
-        <label for="mensagem">Mensagem:</label><br>
-        <textarea name="mensagem" rows="5" required></textarea><br><br>
+                <div class="form-group">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                </div>
 
-        <button type="submit">Enviar</button>
-        <hr style="color: white;"><br>
+                <button type="submit" class="btn-submit">Enviar Mensagem</button>
+            </form>
+        </div>
 
-        <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+    </div>
 
+    <footer class="footer">
+        <p>&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 
