--- a/Membros/igor.html
+++ b/Membros/igor.html
@@ -43,6 +43,10 @@
             facilitem a vida das pessoas e façam diferença no mundo digital.
         </p>
     </section>
+
+      <hr>
+  <br>
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 </body>
 
 </html>
