--- a/Membros/jose.html
+++ b/Membros/jose.html
@@ -45,6 +45,11 @@
             programando!
         </p>
     </section>
+
+      <hr>
+  <br>
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+  
 </body>
 
 </html>
