--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -49,6 +49,11 @@
             a me aventurar na área de computação e programação de sites e jogos.
         </p>
     </section>
+
+      <hr>
+  <br>
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+  
 </body>
 
 </html>
