--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           <h3>🛒 Sistema Loja Java</h3>
         </div>
       </a>
+    </div>
+    
+    <hr>
+    <br>
+    <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
 
 </body>
