--- a/contato.html
+++ b/contato.html
@@ -74,9 +74,9 @@
 
     </div>
 
-    <footer class="footer">
-        <p>&copy; 2025 TechConnect. Todos os direitos reservados.</p>
-    </footer>
+      <hr>
+  <br>
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
 </body>
 
