--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
 
             <div class="info-card">
                 <h3>📍 Endereço</h3>
-                <p><a href="https://www.google.com/maps/place/R.+Manoel+Cardoso+Palhano+-+Campina+Grande,+PB,+58408-326/@-7.2497773,-35.8704086,20z/data=!4m6!3m5!1s0x7ac1e808b0b563d:0xe9bd64ae5d41a1bc!8m2!3d-7.2495937!4d-35.8703436!16s%2Fg%2F1ymxnhcsm?entry=ttu&g_ep=EgoyMDI1MTEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">R. Manoel Cardoso Palhano, 124-152<br>Itararé, Campina Grande - PB<br>58408-326</p>
+                <p><a href="https://www.google.com/maps/place/R.+Manoel+Cardoso+Palhano+-+Campina+Grande,+PB,+58408-326/@-7.2497773,-35.8704086,20z/data=!4m6!3m5!1s0x7ac1e808b0b563d:0xe9bd64ae5d41a1bc!8m2!3d-7.2495937!4d-35.8703436!16s%2Fg%2F1ymxnhcsm?entry=ttu&g_ep=EgoyMDI1MTEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">R. Manoel Cardoso Palhano, 124-152<br>Itararé, Campina Grande - PB<br>58408-326</p></a>
             </div>
 
             <div class="info-card">
