--- a/contato.html
+++ b/contato.html
@@ -11,6 +11,7 @@
 <body>
 
     <nav>
+        <img src="../site_empresarial/img/logo.png" class="logo">
         <a href="../site_empresarial/index.html">Home</a>|
         <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
         <a href="../site_empresarial/portifolio.html">Portfólio</a>|
