--- a/equipe.html
+++ b/equipe.html
@@ -12,6 +12,7 @@
 
   <body>
     <nav>
+      <img src="../site_empresarial/img/logo.png" class="logo">
       <a href="../site_empresarial/index.html">Home</a>|
       <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
       <a href="../site_empresarial/portifolio.html">Portfólio</a>|
@@ -59,7 +60,7 @@
   </div>
 
   <br>
-  <hr style="color: white;">
+  <hr style="color: white;" size="235px">
   <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
 
