--- a/portifolio.html
+++ b/portifolio.html
@@ -11,6 +11,7 @@
 <body>
 
   <nav>
+    <img src="../site_empresarial/img/logo.png" class="logo">
     <a href="../site_empresarial/index.html">Home</a>|
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
     <a href="../site_empresarial/portifolio.html">Portfólio</a>|
@@ -32,7 +33,7 @@
     <h2>Projetos em Destaque</h2>
     <br>
 
-    <table border="1" cellpadding="15" style="border-collapse: collapse; width: 85%; text-align: left;">
+    <table border="1" cellpadding="15" style="border-collapse: collapse; width: 85%; text-align: center;">
       <tr style="background-color: #1d1d2f; color: #c7d1ff;">
         <th>Projeto</th>
         <th>Descrição</th>
@@ -41,28 +42,28 @@
 
       <tr>
         <td><strong>Site Institucional - GreenTech</strong></td>
-        <td>Desenvolvimento de um site moderno e responsivo para uma startup sustentável, com foco em design
+        <td>Desenvolvimento de um site moderno e responsivo para uma startup sustentável, <br> com foco em design
           limpo e experiência do usuário.</td>
         <td>HTML, CSS, JavaScript</td>
       </tr>
 
       <tr>
         <td><strong>Sistema de Controle de Estoque</strong></td>
-        <td>Criação de um sistema web simples para cadastro de produtos, controle de entrada e saída e geração
+        <td>Criação de um sistema web simples para cadastro de produtos, <br>controle de entrada e saída e geração
           de relatórios.</td>
         <td>HTML, CSS, PHP</td>
       </tr>
 
       <tr>
         <td><strong>Landing Page - Evento TechDay</strong></td>
-        <td>Página de divulgação com formulário de inscrição e layout responsivo, voltada para um evento
+        <td>Página de divulgação com formulário de inscrição e layout responsivo, <br>voltada para um evento
           universitário de tecnologia.</td>
         <td>HTML, CSS</td>
       </tr>
 
       <tr>
         <td><strong>Protótipo de Dashboard Administrativo</strong></td>
-        <td>Modelo visual de painel de controle com seções de métricas, gráficos e navegação lateral,
+        <td>Modelo visual de painel de controle com seções de métricas, <br>gráficos e navegação lateral,
           desenvolvido para estudo de UX/UI.</td>
         <td>HTML, CSS (Flexbox, Grid)</td>
       </tr>
@@ -70,12 +71,12 @@
 
     <br><br>
     <p>
-      Cada projeto foi planejado com foco em boas práticas, usabilidade e design responsivo,
+      Cada projeto foi planejado com foco em boas práticas, usabilidade e design responsivo, <br>
       representando o compromisso da <strong>TechConnect</strong> em entregar soluções digitais de qualidade.
     </p>
   </div>
 
-  <hr>
+  <hr size="200px">
   <br>
   <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
