--- a/quemsomos.html
+++ b/quemsomos.html
@@ -11,6 +11,7 @@
 <body>
 
     <nav>
+        <img src="../site_empresarial/img/logo.png" class="logo">
         <a href="../site_empresarial/index.html">Home</a>|
         <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
         <a href="../site_empresarial/portifolio.html">Portfólio</a>|
@@ -24,14 +25,14 @@
         <h1>Quem Somos</h1>
         <br><br>
         <p>
-            A <strong>TechConnect</strong> é formada por profissionais apaixonados por tecnologia e inovação.
-            Nascemos com o propósito de transformar o modo como pessoas e empresas interagem com o digital,
+            A <strong>TechConnect</strong> é formada por profissionais apaixonados por tecnologia e inovação. <br>
+            Nascemos com o propósito de transformar o modo como pessoas e empresas interagem com o digital, <br>
             entregando soluções inteligentes e experiências únicas.
         </p>
         <br>
         <p>
-            Mais do que desenvolver sistemas, buscamos construir relações de confiança,
-            sempre baseadas em <strong>ética, transparência e qualidade</strong>.
+            Mais do que desenvolver sistemas, buscamos construir relações de confiança, <br>
+            sempre baseadas em <strong>ética, transparência e qualidade</strong>. <br>
             Trabalhamos com foco em resultados e em gerar impacto positivo por meio da tecnologia.
         </p>
         <br>
@@ -48,7 +49,7 @@
         </ul>
     </div>
     
-    <hr>
+    <hr size="280px">
     <br>
     <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
