--- a/Membros/igor.html
+++ b/Membros/igor.html
@@ -10,6 +10,7 @@
 
 <body>
     <nav>
+        <img src="../img/logo.png" class="logo">
         <a href="../index.html">Home</a>|
         <a href="../quemsomos.html">Quem somos</a>|
         <a href="../portifolio.html">Portfólio</a>|
