--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -11,6 +11,7 @@
 <body>
     <div align="center" class="teste">
         <nav>
+            <img src="../img/logo.png" class="logo">
             <a href="../index.html">Home</a>|
             <a href="../quemsomos.html">Quem somos</a>|
             <a href="../portifolio.html">Portfólio</a>|
