--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <nav>
+    <img src="../site_empresarial/img/logo.png" class="logo">
     <a href="../site_empresarial/index.html">Home</a>|
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
     <a href="../site_empresarial/portifolio.html">Portfólio</a>|
@@ -52,7 +53,7 @@
       </a>
     </div>
     
-    <hr>
+    <hr size="85px">
     <br>
     <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 
