--- a/formulario.html
+++ b/formulario.html
@@ -5,8 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="../site_empresarial/css/style.css">
 </head>
 <body>
+
+    <!-- ESSA CLASSE DE FORMULÁRIO SERVE APENAS PARA VOLTAR A PÁGINA DE CONTATO -->
+
+
+      <nav>
+        <img src="../site_empresarial/img/logo.png" class="logo">
+        <a href="../site_empresarial/index.html">Home</a>|
+        <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
+        <a href="../site_empresarial/portifolio.html">Portfólio</a>|
+        <a href="../site_empresarial/equipe.html">Equipe</a>|
+        <a href="../site_empresarial/contato.html">Contato</a>|
+    </nav>
+
+    <div class="center-text">
+        <h1>Fale Conosco</h1>
+        <p>Entre em contato conosco. Estamos prontos para transformar suas ideias em realidade digital.</p>
+    </div>
+
+    <div class="contact-container">
+
+        <div class="contact-info">
+            <div class="info-card">
+                <h3>📧 Email</h3>
+                <p>contato@techconnect.com.br</p>
+            </div>
+
+            <div class="info-card">
+                <h3>📞 Telefone</h3>
+                <p>(83) 99999-9999</p>
+            </div>
+
+            <div class="info-card">
+                <h3>📍 Endereço</h3>
+                <p><a href="https://www.google.com/maps/place/R.+Manoel+Cardoso+Palhano+-+Campina+Grande,+PB,+58408-326/@-7.2497773,-35.8704086,20z/data=!4m6!3m5!1s0x7ac1e808b0b563d:0xe9bd64ae5d41a1bc!8m2!3d-7.2495937!4d-35.8703436!16s%2Fg%2F1ymxnhcsm?entry=ttu&g_ep=EgoyMDI1MTEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">R. Manoel Cardoso Palhano, 124-152<br>Itararé, Campina Grande - PB<br>58408-326</p></a>
+            </div>
+
+            <div class="info-card">
+                <h3>🌐 Redes Sociais</h3>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/sistemas.unifacisa/" target="_blank">Instagram</a>
+                    <a href="https://github.com/RennerFarias/site_empresarial" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact-form">
+            <h2>Envie uma mensagem</h2>
+            <form action="formulario.html" method="get">
+                <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" name="nome" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                </div>
+
+                <button type="submit" class="btn-submit">Enviar Mensagem</button>
+            </form>
+        </div>
+
+    </div>
+
+      <hr>
+  <br>
+  <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+
     
 </body>
 </html>
