--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </nav>
 
   <div class="center-text">
+    <img src="../site_empresarial/img/banner.png" width="150px">
     <h1>Bem-vindo à TechConnect</h1>
     <p>
       Na <b>TechConnect</b>, acreditamos que a tecnologia é o elo que transforma ideias em resultados reais.
