imagens na parte de portfólio

--- a/portifolio.html
+++ b/portifolio.html
@@ -41,28 +41,40 @@
       </tr>
 
       <tr>
-        <td><strong>Site Institucional - GreenTech</strong></td>
+        <td>
+        <strong>Site Institucional - GreenTech</strong>
+        <img src="img/Greentechv2.png" alt="Projeto GreenTech" style="display: block; margin: 10px auto; max-width: 200px;">
+        </td>
         <td>Desenvolvimento de um site moderno e responsivo para uma startup sustentável, <br> com foco em design
           limpo e experiência do usuário.</td>
         <td>HTML, CSS, JavaScript</td>
       </tr>
 
       <tr>
-        <td><strong>Sistema de Controle de Estoque</strong></td>
+        <td>
+        <strong>Sistema de Controle de Estoque</strong>
+        <img src="img/Sistema de controle de estoque.png" alt="Projeto Sistema de Estoque" style="display: block; margin: 10px auto; max-width: 200px;">
+        </td>
         <td>Criação de um sistema web simples para cadastro de produtos, <br>controle de entrada e saída e geração
           de relatórios.</td>
         <td>HTML, CSS, PHP</td>
       </tr>
 
       <tr>
-        <td><strong>Landing Page - Evento TechDay</strong></td>
+        <td>
+        <strong>Landing Page - Evento TechDay</strong>
+        <img src="img/Techday.png"Projeto Landing Page TechDay" style="display: block; margin: 10px auto; max-width: 200px;">
+        </td>
         <td>Página de divulgação com formulário de inscrição e layout responsivo, <br>voltada para um evento
           universitário de tecnologia.</td>
         <td>HTML, CSS</td>
       </tr>
 
       <tr>
-        <td><strong>Protótipo de Dashboard Administrativo</strong></td>
+        <td>
+        <strong>Protótipo de Dashboard Administrativo</strong>
+        <img src="img/Protótipo de Dashboard Administrativo.png" alt="Projeto Dashboard Administrativo" style="display: block; margin: 10px auto; max-width: 200px;">
+        </td>
         <td>Modelo visual de painel de controle com seções de métricas, <br>gráficos e navegação lateral,
           desenvolvido para estudo de UX/UI.</td>
         <td>HTML, CSS (Flexbox, Grid)</td>
