--- a/portifolio.html
+++ b/portifolio.html
@@ -63,7 +63,7 @@
       <tr>
         <td>
         <strong>Landing Page - Evento TechDay</strong>
-        <img src="img/Techday.pngProjeto Landing Page TechDay" style="display: block; margin: 10px auto; max-width: 200px;">
+        <img src="../site_empresarial/img/Techday.png" style="display: block; margin: 10px auto; max-width: 200px;">
         </td>
         <td>Página de divulgação com formulário de inscrição e layout responsivo, <br>voltada para um evento
           universitário de tecnologia.</td>
